--- a/.github/workflows/deploy-feature.yml
+++ b/.github/workflows/deploy-feature.yml
@@ -21,7 +21,11 @@ on:
 
 jobs:
   deploy-feature:
-    runs-on: [self-hosted, EC2]
+    name: Deploy to ${{ github.event.inputs.branch || github.ref_name }}
+    runs-on: 
+      - self-hosted
+      - EC2
+      - ${{ github.event.inputs.branch || github.ref_name }}
     
     steps:
     - name: Verify EC2 instance
@@ -99,7 +103,7 @@ jobs:
         PERSON_LOWER=$(echo "$PERSON_NAME" | tr '[:upper:]' '[:lower:]')
         
         if [ "${NAME_LOWER}" != "${PERSON_LOWER}" ]; then
-            echo "⚠️ ADVERTENCIA: El NAME en .env (${NAME_VALUE}) no coincide con ${PERSON_NAME}"
+            echo "⚠ ADVERTENCIA: El NAME en .env (${NAME_VALUE}) no coincide con ${PERSON_NAME}"
         fi
         
         FULL_DOMAIN="${NAME_LOWER}.${DOMAIN_BASE}"
@@ -296,7 +300,7 @@ jobs:
         if curl -s -f http://localhost:${TEST_PORT}/ > /dev/null 2>&1; then
           echo "✅ Aplicación respondiendo en puerto ${TEST_PORT}"
         else
-          echo "⚠️ La aplicación no responde"
+          echo "⚠ La aplicación no responde"
           pm2 logs ${APP_NAME} --lines 20 --nostream
         fi
         
@@ -323,7 +327,7 @@ jobs:
         echo "   - https://${FULL_DOMAIN}/test/version"
         echo "   - https://${FULL_DOMAIN}/test/health"
         echo ""
-        echo "🛠️ COMANDOS ÚTILES:"
+        echo "🛠 COMANDOS ÚTILES:"
         echo "   - Ver logs test: pm2 logs ${APP_NAME}"
         echo "   - Reiniciar test: pm2 restart ${APP_NAME}"
         echo "   - Ver logs prod: pm2 logs flask-app-${SUBDOMAIN}"
