--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -10,151 +10,331 @@ on:
   workflow_dispatch:
 
 jobs:
-  deploy:
-    name: Deploy main to ${{ matrix.name }}'s instance
+  deploy-main:
+    name: Deploy Main to Instance ${{ matrix.instance }}
+    runs-on: 
+      - self-hosted
+      - EC2
+      - ${{ matrix.runner-tag }}
     
     strategy:
-      fail-fast: false
       matrix:
+        instance: [1, 2, 3, 4]
         include:
           - instance: 1
-            name: oliver
-            runner_label: Oliver-branch
+            runner-tag: "oliver-main"
+            person: "Oliver"
           - instance: 2
-            name: hernando
-            runner_label: Hernando-branch
+            runner-tag: "hernando-main" 
+            person: "Hernando"
           - instance: 3
-            name: alan
-            runner_label: Alan-branch
+            runner-tag: "alan-main"
+            person: "Alan"
           - instance: 4
-            name: sebastian
-            runner_label: Sebastian-branch
-
-    # CORRECCIÓN AQUÍ: Usamos fromJSON para construir la lista de etiquetas
-    runs-on: ${{ fromJSON(format('["self-hosted", "EC2", "{0}"]', matrix.runner_label)) }}
-
-    env:
-      DOMAIN_BASE: tumaquinaya.com
-      INSTANCE_NUM: ${{ matrix.instance }}
-      PERSON_NAME: ${{ matrix.name }}
-      ENV_FILE: ${{ secrets[format('ENV_FILE_{0}', matrix.instance)] }}
-
+            runner-tag: "sebastian-main"
+            person: "Sebastian"
+    
     steps:
-      - name: 🎯 Checkout code from main branch
-        uses: actions/checkout@v3
-        with:
-          ref: main
-          fetch-depth: 0
+    - name: Verify EC2 instance
+      run: |
+        echo "🔍 Verificando instancia EC2..."
+        INSTANCE_ID=$(curl -s http://169.254.169.254/latest/meta-data/instance-id || echo "No disponible")
+        HOSTNAME=$(hostname)
+        echo "📍 Instance ID: $INSTANCE_ID"
+        echo "📍 Hostname: $HOSTNAME"
+        echo "✅ Ejecutando en modo SELF-HOSTED"
+    
+    - name: Determine configuration
+      id: config
+      run: |
+        # Configuración de la instancia desde matrix
+        INSTANCE_NUM="${{ matrix.instance }}"
+        PERSON_NAME="${{ matrix.person }}"
+        
+        echo "TARGET_INSTANCE=${INSTANCE_NUM}" >> $GITHUB_OUTPUT
+        echo "PERSON_NAME=${PERSON_NAME}" >> $GITHUB_OUTPUT
+        
+        echo "🏠 SELF-HOSTED: Desplegando main en instancia ${INSTANCE_NUM} (${PERSON_NAME})"
 
-      - name: 📋 Display environment info
+    - name: Checkout main branch
+      uses: actions/checkout@v3
+      with:
+        ref: main
+        fetch-depth: 0
+
+    - name: Deploy main to local instance
+      env:
+        ENV_FILE: ${{ secrets[format('ENV_FILE_{0}', matrix.instance)] }}
+        DOMAIN_BASE: tumaquinaya.com
+        PERSON_NAME: ${{ matrix.person }}
+        INSTANCE_NUM: ${{ matrix.instance }}
+      run: |
+        echo "🚀 SELF-HOSTED: Desplegando main en instancia ${INSTANCE_NUM}"
+        
+        # Crear archivo .env directamente
+        echo "$ENV_FILE" > /tmp/main_env_file
+        
+        # Extraer NAME del .env
+        NAME_VALUE=$(grep "^NAME=" /tmp/main_env_file | cut -d'=' -f2 | tr -d '"' | tr -d "'" | xargs)
+        NAME_LOWER=$(echo "$NAME_VALUE" | tr '[:upper:]' '[:lower:]')
+        PERSON_LOWER=$(echo "$PERSON_NAME" | tr '[:upper:]' '[:lower:]')
+        
+        if [ "${NAME_LOWER}" != "${PERSON_LOWER}" ]; then
+            echo "⚠ ADVERTENCIA: El NAME en .env (${NAME_VALUE}) no coincide con ${PERSON_NAME}"
+        fi
+        
+        FULL_DOMAIN="${NAME_LOWER}.${DOMAIN_BASE}"
+        
+        echo "📋 Configuración:"
+        echo "   - Rama: main"
+        echo "   - Persona: ${PERSON_NAME}"
+        echo "   - Instancia: ${INSTANCE_NUM}"
+        echo "   - Dominio: ${FULL_DOMAIN}"
+        echo "   - Modo: SELF-HOSTED (main production)"
+        
+        # Crear script de despliegue local para main
+        cat > /tmp/deploy_main_local.sh << 'DEPLOYEOF'
+        #!/bin/bash
+        set -e
+        
+        SUBDOMAIN="${1}"
+        DOMAIN_BASE="${2}"
+        INSTANCE_NUM="${3}"
+        PERSON_NAME="${4}"
+        
+        echo "🔧 Configuración de despliegue main (SELF-HOSTED):"
+        echo "   - Rama: main"
+        echo "   - Persona: ${PERSON_NAME}"
+        echo "   - Subdominio: ${SUBDOMAIN}"
+        echo "   - Dominio: ${SUBDOMAIN}.${DOMAIN_BASE}"
+        echo "   - Instancia: ${INSTANCE_NUM}"
+        
+        BASE_DIR="/opt/location-tracker"
+        MAIN_DIR="${BASE_DIR}/Proyecto_1_Diseno"
+        mkdir -p "${MAIN_DIR}"
+        cd "${MAIN_DIR}"
+        
+        echo "📁 Directorio principal: ${MAIN_DIR}"
+        
+        # Backup del directorio /test si existe
+        TEST_BACKUP=""
+        if [ -d "test" ]; then
+          TEST_BACKUP="/tmp/test_backup_main_$$"
+          echo "💾 Respaldando directorio /test..."
+          cp -r test "${TEST_BACKUP}" 2>/dev/null || true
+        fi
+        
+        if [ -d .git ]; then
+          echo "📦 Actualizando código de la rama main..."
+          git fetch origin main
+          git checkout main
+          git reset --hard origin/main
+          CODE_UPDATED=true
+        else
+          echo "📥 Clonando repositorio en rama main..."
+          cd "$(dirname "${MAIN_DIR}")"
+          git clone -b main https://github.com/Diseno2025-30/Geolocation.git .
+          CODE_UPDATED=true
+        fi
+        
+        cd "${MAIN_DIR}"
+        
+        # Restaurar directorio /test si existía
+        if [ -n "${TEST_BACKUP}" ] && [ -d "${TEST_BACKUP}" ]; then
+          echo "🔄 Restaurando directorio /test..."
+          rm -rf test 2>/dev/null || true
+          mv "${TEST_BACKUP}" test
+          echo "✅ Directorio /test preservado"
+        fi
+        
+        PROJECT_PATH=$(pwd)
+        
+        # Copiar .env desde el backup temporal
+        if [ -f "/tmp/main_env_file" ]; then
+          cp "/tmp/main_env_file" .env
+        fi
+        
+        echo "" >> .env
+        echo "# Configuración de producción main" >> .env
+        echo "PRODUCTION_MODE=true" >> .env
+        echo "PERSON_NAME=${PERSON_NAME}" >> .env
+        
+        FULL_DOMAIN="${SUBDOMAIN}.${DOMAIN_BASE}"
+        APP_NAME="flask-app-${SUBDOMAIN}"
+        MAIN_PORT=5000
+        
+        echo "📊 Configuración:"
+        echo "   - APP_NAME: ${APP_NAME}"
+        echo "   - Puerto main: ${MAIN_PORT}"
+        echo "   - Proyecto: ${PROJECT_PATH}"
+        
+        echo "📦 Instalando dependencias..."
+        sudo apt-get update -qq
+        sudo apt-get install -y python3-pip python3-venv nginx
+        
+        if ! command -v pm2 &> /dev/null; then
+          if ! command -v node &> /dev/null; then
+            curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
+            sudo apt-get install -y nodejs
+          fi
+          sudo npm install -g pm2
+          pm2 startup systemd -u ubuntu --hp /home/ubuntu
+        fi
+        
+        echo "🐍 Configurando entorno Python para producción..."
+        if [ ! -d "venv" ]; then
+          python3 -m venv venv
+        fi
+        
+        source venv/bin/activate
+        pip install --upgrade pip
+        pip install flask psycopg2-binary python-dotenv
+        
+        if [ -f requirements.txt ]; then
+          pip install -r requirements.txt
+        fi
+        
+        # Limpiar apps antiguas con nombres legacy
+        pm2 stop "flask-app-${INSTANCE_NUM}" 2>/dev/null || true
+        pm2 delete "flask-app-${INSTANCE_NUM}" 2>/dev/null || true
+        
+        # Parar la aplicación actual si existe
+        if pm2 list | grep -q "${APP_NAME}"; then
+          echo "🔄 Recargando ${APP_NAME}..."
+          pm2 stop ${APP_NAME}
+        fi
+        
+        sudo fuser -k ${MAIN_PORT}/tcp 2>/dev/null || true
+        sleep 2
+        
+        cat > start_main_app.sh << STARTSCRIPT
+        #!/bin/bash
+        cd "\$(dirname "\$0")"
+        source venv/bin/activate
+        export FLASK_APP=udp_flask_server.py
+        export FLASK_ENV=production
+        export FLASK_TRUSTED_PROXIES="127.0.0.1"
+        python udp_flask_server.py
+        STARTSCRIPT
+        chmod +x start_main_app.sh
+        
+        echo "🚀 Iniciando aplicación de producción..."
+        if pm2 list | grep -q "${APP_NAME}"; then
+          pm2 reload ${APP_NAME} --update-env
+        else
+          pm2 start start_main_app.sh \
+            --name ${APP_NAME} \
+            --interpreter bash \
+            --cwd ${PROJECT_PATH} \
+            --log-date-format "YYYY-MM-DD HH:mm:ss"
+        fi
+        
+        pm2 save
+        
+        echo "⏳ Esperando inicio de la aplicación..."
+        sleep 5
+        
+        echo "📊 Estado de la aplicación:"
+        pm2 status ${APP_NAME}
+        
+        echo "🧪 Probando aplicación..."
+        if curl -s -f http://localhost:${MAIN_PORT}/ > /dev/null 2>&1; then
+          echo "✅ Aplicación respondiendo en puerto ${MAIN_PORT}"
+        else
+          echo "⚠ La aplicación no responde"
+          pm2 logs ${APP_NAME} --lines 20 --nostream
+        fi
+        
+        echo ""
+        echo "========================================="
+        echo "🎉 PRODUCCIÓN DESPLEGADA (SELF-HOSTED)"
+        echo "========================================="
+        echo ""
+        echo "📊 INFORMACIÓN:"
+        echo "   - Persona: ${PERSON_NAME}"
+        echo "   - Rama: main"
+        echo "   - Instancia EC2: ${INSTANCE_NUM}"
+        echo "   - Aplicación PM2: ${APP_NAME}"
+        echo "   - Puerto interno: ${MAIN_PORT}"
+        echo "   - Modo: LOCAL (sin SSH)"
+        echo ""
+        echo "🔗 URLS:"
+        echo "   - Producción: https://${FULL_DOMAIN}/"
+        if [ -d "${PROJECT_PATH}/test" ]; then
+        echo "   - Test: https://${FULL_DOMAIN}/test (preservado)"
+        fi
+        echo ""
+        echo "📍 ENDPOINTS PRINCIPALES:"
+        echo "   - https://${FULL_DOMAIN}/coordenadas"
+        echo "   - https://${FULL_DOMAIN}/database"
+        echo "   - https://${FULL_DOMAIN}/version"
+        echo "   - https://${FULL_DOMAIN}/health"
+        echo ""
+        echo "🛠 COMANDOS ÚTILES:"
+        echo "   - Ver logs prod: pm2 logs ${APP_NAME}"
+        echo "   - Reiniciar prod: pm2 restart ${APP_NAME}"
+        if [ -d "${PROJECT_PATH}/test" ]; then
+        echo "   - Ver logs test: pm2 logs flask-test-${SUBDOMAIN}"
+        echo "   - Reiniciar test: pm2 restart flask-test-${SUBDOMAIN}"
+        fi
+        echo "   - Estado: pm2 status"
+        echo "========================================="
+        DEPLOYEOF
+        
+        chmod +x /tmp/deploy_main_local.sh
+        
+        # Ejecutar localmente (sin SSH)
+        /tmp/deploy_main_local.sh "${NAME_LOWER}" "${DOMAIN_BASE}" "${INSTANCE_NUM}" "${PERSON_NAME}"
+        
+        # Mover el archivo .env a su ubicación final
+        if [ -f /tmp/main_env_file ]; then
+          mv /tmp/main_env_file /opt/location-tracker/Proyecto_1_Diseno/.env
+        fi
+        
+        # Limpiar
+        rm -f /tmp/deploy_main_local.sh
+        
+        echo "✅ Despliegue SELF-HOSTED completado para ${PERSON_NAME}"
+
+    - name: Verify deployment
+      run: |
+        echo "✅ Deployment completed for ${{ matrix.person }}"
+        echo "   - Instance: ${{ matrix.instance }}"
+        echo "   - App: flask-app-$(echo "${{ matrix.person }}" | tr '[:upper:]' '[:lower:]')"
+        
+        # Verificar si el directorio test se preservó
+        if [ -d "/opt/location-tracker/Proyecto_1_Diseno/test" ]; then
+          echo "✅ /test directory preserved"
+        fi
+
+  summary:
+    runs-on: ubuntu-latest  # Usar GitHub runner para el resumen
+    needs: deploy-main
+    if: always()  # Ejecutar siempre, incluso si algún deployment falla
+    steps:
+      - name: 📊 Deployment Summary
         run: |
-          echo "🏃 Running on ${{ env.PERSON_NAME }}'s instance (Runner Label: ${{ matrix.runner_label }})"
-          echo "🖥️ Hostname: $(hostname)"
-          echo "👤 User: $(whoami)"
-
-      - name: 🚀 Deploy Production Environment
-        run: |
-          echo "🚀 Iniciando despliegue de PRODUCCION para ${{ env.PERSON_NAME }}..."
-
-          # Guardar .env temporalmente de forma segura
-          TEMP_ENV_FILE=$(mktemp)
-          echo "${{ env.ENV_FILE }}" > "${TEMP_ENV_FILE}"
-
-          # Extraer NAME del .env para el subdominio
-          NAME_VALUE=$(grep "^NAME=" "${TEMP_ENV_FILE}" | cut -d'=' -f2 | tr -d '"' | tr -d "'" | tr '[:upper:]' '[:lower:]' | xargs)
-          if [ -z "$NAME_VALUE" ]; then
-            NAME_VALUE="${{ env.PERSON_NAME }}"
-          fi
-
-          FULL_DOMAIN="${NAME_VALUE}.${{ env.DOMAIN_BASE }}"
-          APP_NAME="flask-app-${NAME_VALUE}"
-
-          echo "📋 Configuración:"
-          echo "   - Persona: ${{ env.PERSON_NAME }}"
-          echo "   - Instancia: ${{ env.INSTANCE_NUM }}"
-          echo "   - Subdominio: ${NAME_VALUE}"
-          echo "   - Dominio: ${FULL_DOMAIN}"
-          echo "   - App PM2: ${APP_NAME}"
-
-          # Crear script de despliegue
-          cat > /tmp/deploy_prod_script.sh << 'DEPLOYEOF'
-          #!/bin/bash
-          set -e
-          
-          PROJECT_REPO_DIR=$1
-          TEMP_ENV_FILE=$2
-          APP_NAME=$3
-          
-          echo "🔧 (Runner Local) Iniciando script de despliegue..."
-          
-          if [ -d "/home/ubuntu/Web-server-UDP" ]; then
-            PROJECT_BASE="/home/ubuntu/Web-server-UDP"
-          else
-            PROJECT_BASE="/opt/location-tracker"
-            sudo mkdir -p $PROJECT_BASE
-            sudo chown $USER:$USER $PROJECT_BASE
-          fi
-          
-          PROJECT_PATH="${PROJECT_BASE}/Proyecto_1_Diseno"
-          
-          echo "📂 Ruta final del proyecto: ${PROJECT_PATH}"
-          
-          sudo rsync -a --delete --exclude='.git' --exclude='test/' "${PROJECT_REPO_DIR}/" "${PROJECT_PATH}/"
-          
-          sudo mv "${TEMP_ENV_FILE}" "${PROJECT_PATH}/.env"
-          
-          cd ${PROJECT_PATH}
-          
-          echo "🐍 Configurando entorno Python..."
-          if [ ! -d "venv" ]; then
-            python3 -m venv venv
-          fi
-          
-          source venv/bin/activate
-          pip install --upgrade pip -q
-          pip install flask psycopg2-binary python-dotenv -q
-          if [ -f requirements.txt ]; then
-            pip install -r requirements.txt -q
-          fi
-          
-          if [ ! -f "start_app.sh" ]; then
-              cat > start_app.sh << 'STARTSCRIPT'
-              #!/bin/bash
-              SCRIPT_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
-              cd "$SCRIPT_DIR"
-              source venv/bin/activate
-              export FLASK_APP=udp_flask_server.py
-              export FLASK_ENV=production
-              python udp_flask_server.py
-              STARTSCRIPT
-              chmod +x start_app.sh
-          fi
-          
-          echo "🚀 Gestionando la aplicación con PM2..."
-          if pm2 list | grep -q "${APP_NAME}"; then
-            echo "🔄 Recargando la aplicación existente: ${APP_NAME}..."
-            pm2 reload ${APP_NAME} --update-env
-          else
-            echo "🆕 Iniciando una nueva instancia de la aplicación: ${APP_NAME}..."
-            sudo fuser -k 5000/tcp 2>/dev/null || true
-            sleep 2
-            pm2 start start_app.sh --name ${APP_NAME} --interpreter bash
-          fi
-          
-          pm2 save
-          sleep 3
-          
-          echo "✅ Despliegue completado."
-          pm2 status ${APP_NAME}
-          
-          if [ -d "${PROJECT_PATH}/test" ]; then
-            echo "✅ El directorio /test fue preservado correctamente."
-          fi
-          
-          DEPLOYEOF
-          
-          chmod +x /tmp/deploy_prod_script.sh
-          
-          bash /tmp/deploy_prod_script.sh "$(pwd)/Proyecto_1_Diseno" "${TEMP_ENV_FILE}" "${APP_NAME}"
-          
-          rm /tmp/deploy_prod_script.sh
+          echo "========================================="
+          echo "🎉 MAIN DEPLOYMENT SUMMARY"
+          echo "========================================="
+          echo ""
+          echo "📊 STATUS:"
+          echo "   Oliver (Instance 1): ${{ needs.deploy-main.result }}"
+          echo "   Hernando (Instance 2): ${{ needs.deploy-main.result }}"
+          echo "   Alan (Instance 3): ${{ needs.deploy-main.result }}"
+          echo "   Sebastian (Instance 4): ${{ needs.deploy-main.result }}"
+          echo ""
+          echo "🔗 PRODUCTION URLS:"
+          echo "   - https://oliver.tumaquinaya.com"
+          echo "   - https://hernando.tumaquinaya.com"
+          echo "   - https://alan.tumaquinaya.com"
+          echo "   - https://sebastian.tumaquinaya.com"
+          echo ""
+          echo "📁 TEST ENDPOINTS (preserved if they existed):"
+          echo "   - https://oliver.tumaquinaya.com/test"
+          echo "   - https://hernando.tumaquinaya.com/test"
+          echo "   - https://alan.tumaquinaya.com/test"
+          echo "   - https://sebastian.tumaquinaya.com/test"
+          echo ""
+          echo "🚀 Deployment completed at: $(date)"
+          echo "========================================="
